# nordseye

./: ACKNOWLEDGEMENT  Aknowledments  Authors  README  README.md  cert.sh  installation
gtk-mkahawa-client/: HACKING  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
gtk-mkahawa-client/data/gtk-mkahawa-client/ui/: info-panel-exit-dlg.ui
gtk-mkahawa-client/src/: Makefile.am  Makefile.in  blocker_ui.c  blocker_ui.h  debug.h  main.c  mca_app.c  mca_app.h  mca_blocker.c  mca_blocker.h  mca_cmd_message.c  mca_cmd_message.h  mca_cmd_panel.c  mca_cmd_panel.h  mca_cmd_session.c  mca_cmd_session.h  mca_cmd_state.c  mca_cmd_state.h  mca_cmd_system.c  mca_cmd_system.h  mca_cmd_update.c  mca_cmd_update.h  mca_cmd_utils.c  mca_cmd_utils.h  mca_command.c  mca_command.h  mca_debug.h  mca_info_panel.c  mca_info_panel.h  mca_network.c  mca_network.c.bak  mca_network.h  mca_network.h.bak  mca_network_private.h  mca_network_utils.c  mca_status.c  mca_status.h  mca_svr_req.c  mca_svr_req.h  mca_types.h  (+6 more)
gtk-mkahawa-client/src/ui/: blocker.ui  info-panel-exit-wnd.ui  info-panel-help.ui  info-panel-wnd.ui  info-panel.ui  info-panel.ui.orig
libcclc/: AUTHORS  COPYING  Makefile.in  README  config.h.in  configure  configure.in
libcclc/src/: Makefile.am  Makefile.in  cclc.c  cclc_private.h  util.c
libccls/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.status  configure  configure.in  libtool
libccls/autom4te.cache/: output.0  traces.0
libccls/src/: Makefile  Makefile.am  Makefile.in  ccl.c  ccl.lo  ccl_private.h  ccls.h  client.c  client.lo  data.c  data.lo  employee.c  employee.lo  libccls.la  logging.c  logging.lo  member.c  member.lo  tarif.c  tarif.lo  util.c
libccls/src/.deps/: ccl.Plo  client.Plo  data.Plo  employee.Plo  logging.Plo  member.Plo  tarif.Plo  util.Plo
libccls/src/.libs/: libccls.la  libccls.lai  libccls.so.0  libccls.so.0.8.2
mkahawa-client/: Makefile.am  Makefile.in  README  README.CCLC  aclocal.m4  configure  configure.in
mkahawa-client/m4/: ChangeLog  Makefile.in
mkahawa-client/po/: ChangeLog  POTFILES.in  es.gmo  es.po
mkahawa-client/src/: Makefile.am  Makefile.in  cclc.h  cclcfox.cpp  cclcfox.h  cmds.h  gui.cpp  gui.h  img_ctrl.h  locker.cpp  locker.h  lockpix.cpp  lockpix.h  main.cpp  update.h  util.c
mkahawa-printer/: ChangeLog  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.in
mkahawa-printer/m4/: Makefile.in
mkahawa-printer/po/: POTFILES.in  cclcfox.pot  es.gmo  es.po
mkahawa-printer/src/: Makefile.am  Makefile.in  cclpfox.cpp  cclpfox.h  cmds.h  gui.cpp  gui.h  locker.cpp  locker.h  lockpix.cpp  lockpix.h  main.cpp  mkahawa-printer.cpp  update.h
mkahawa-srv/: CERTIFICATES.howto  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.CCL  aclocal.m4  config.status  configure  configure.in
mkahawa-srv/autom4te.cache/: output.0  requests  traces.0
mkahawa-srv/m4/: ChangeLog  Makefile  Makefile.am  Makefile.in
mkahawa-srv/po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  cclfox.pot  en_US.gmo  en_US.po  es.gmo  es.po  ru_RU.gmo  ru_RU.po  ru_UA.gmo  ru_UA.po
mkahawa-srv/src/: CCLIconItem.cpp  CCLIconItem.h  CCLWin.cpp  CCLWin.h  CashingFrame.cpp  CashingFrame.h  EmployeesFrame.cpp  EmployeesFrame.h  LogFrame.cpp  LogFrame.h  MSGWin.cpp  MSGWin.h  Makefile  Makefile.am  Makefile.in  MembersFrame.cpp  MembersFrame.h  NotpaidFrame.cpp  NotpaidFrame.h  ProductsFrame.cpp  ProductsFrame.h  QTicketsBox.cpp  QTicketsBox.h  ReportFrame.cpp  ReportFrame.h  SettingsBox.cpp  SettingsBox.h  TarifFrame.cpp  TarifFrame.h  TicketsBox.cpp  TicketsBox.h  cclfox.h  cmds.h  icons.cpp  icons.h  main.cpp  mkahawa  update.h  verifiers.cpp  verifiers.h
mkahawa-srv/src/.deps/: CCLIconItem.Po  CCLWin.Po  CashingFrame.Po  EmployeesFrame.Po  LogFrame.Po  MSGWin.Po  MembersFrame.Po  NotpaidFrame.Po  ProductsFrame.Po  QTicketsBox.Po  ReportFrame.Po  SettingsBox.Po  TarifFrame.Po  TicketsBox.Po  icons.Po  main.Po  verifiers.Po
