bin_PROGRAMS=mkahawa

mkahawa_SOURCES= \
CCLWin.cpp \
CCLWin.h \
CCLIconItem.cpp \
CCLIconItem.h \
ProductsFrame.cpp \
ProductsFrame.h \
CashingFrame.cpp \
CashingFrame.h \
TarifFrame.cpp \
TarifFrame.h \
MembersFrame.cpp \
MembersFrame.h \
EmployeesFrame.cpp \
EmployeesFrame.h \
NotpaidFrame.cpp \
NotpaidFrame.h \
LogFrame.cpp \
LogFrame.h \
ReportFrame.cpp \
ReportFrame.h \
TicketsBox.cpp \
TicketsBox.h \
QTicketsBox.cpp \
QTicketsBox.h \
SettingsBox.cpp \
SettingsBox.h \
verifiers.cpp \
verifiers.h \
MSGWin.cpp \
MSGWin.h \
icons.cpp \
icons.h \
cmds.h \
cclfox.h \
main.cpp

INCLUDES = -I/usr/local/include
